postcss/testData/inspections/customPropertiesSet/emptyApply.pcss
:root {
  --my: {
    color: red;
  };
  @apply<error descr="an identifier expected"> </error>;
  @apply --my<EOLError descr="';' expected"></EOLError>
  @apply<EOLError descr="an identifier expected"></EOLError>
}

